--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       
       <button class="settings" onclick="reset()">Reset</button>
     <h5> Made by CookieGang</h5>
+    <script src="script.js"></script>
 </body>
 
 </html>
