--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CookieClicker</title>
-    <link href="style.css" type="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -14,16 +14,15 @@
 
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
-        <h3 id="clickText">click: 0 | click/sec: 0 </h3>
-        <h3 id="multiplierText"> current multiplicator: 0</h3>
+        <h3 id="clickText">Puntos per click: 0 | AutoPuntos: 0/sec </h3>
     </div>
         <img class="round "src="https://images.unsplash.com/photo-1561361398-b2bc9f049851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="" id="clicker" style="width:300px" onclick=""> <!-- smiley Tim -->
     <br><br>
-      <button id='multplierBonus' class="round"  style="font-family:courier;">0-main upgrade: 15</button> 
+      <button id='multplierBonus' class="round"  style="font-family:courier;">0-click harder: 15</button> 
     <br><br>
       <button id='autoClickBonus' class="round"  style="font-family:courier;">0-bonus click: 25 | +1/sec</button>
     <br><br>
-      <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30s</button><br><br>
+      <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
       
     <h5> Made by CookieGang</h5>
     <script src="script.js"></script>
