--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CookieClicker</title>
+
+    <title>SmileyClicker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+     
 </head>
 <body>
-
-
+    <div class="loop-holder">
+        <div class="loop-holder__text">Welcome to SmileyVille</div>
+        <div class="loop-holder__text">Welcome to SmileyVille</div>
+        <div class="loop-holder__text">Welcome to SmileyVille</div>
+        <div class="loop-holder__text">Welcome to SmileyVille</div>
+        <div class="loop-holder__text">Welcome to SmileyVille</div>
+    </div>
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
         <h3 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h3>
@@ -28,3 +36,4 @@
 </body>
 
 </html>
+
