Last modified par Timur

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
      
 </head>
+  
 <body>
-    <div class="loop-holder">
+  <div class="banderole">
+
+   <div class="loop-holder">
         <div class="loop-holder__text">Welcome to SmileyVille</div>
         <div class="loop-holder__text">Welcome to SmileyVille</div>
         <div class="loop-holder__text">Welcome to SmileyVille</div>
         <div class="loop-holder__text">Welcome to SmileyVille</div>
         <div class="loop-holder__text">Welcome to SmileyVille</div>
     </div>
+    </div>
+  <div class="bodypart">
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
         <h3 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h3>
@@ -32,6 +37,7 @@
       <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
       
     <h5> Made by CookieGang</h5>
+    </div>
     <script src="script.js"></script>
 </body>
 
