--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
         <div class="loop-holder__text">Welcome to SmileyVille</div>
     </div>
     </div>
-  <div class="bodypart">
+  <div class="bodypart-container">
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
         <h3 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h3>
     </div>
-        <img class="round "src="https://images.unsplash.com/photo-1561361398-b2bc9f049851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="" id="clicker" style="width:300px" onclick=""> <!-- smiley Tim -->
+        <img class="round "src="https://images.unsplash.com/photo-1561361398-b2bc9f049851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="" id="clicker" style="width: 65%" onclick=""> <!-- smiley Tim -->
     <br><br>
       <button id='multplierBonus' class="round"  style="font-family:courier;">0-click harder: 15</button> 
     <br><br>
       <button id='autoClickBonus' class="round"  style="font-family:courier;">0-bonus click: 25 | +1/sec</button>
     <br><br>
       <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
-      
-    <h5> Made by CookieGang</h5>
+     
+    </div>
+ <div class="timer" id="text-timer">
+      Frenzy timer: 30s
     </div>
     <script src="script.js"></script>
 </body>
