--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
         <img class="round "src="https://images.unsplash.com/photo-1561361398-b2bc9f049851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="" id="clicker" style="width: 65%" onclick=""> <!-- smiley Tim -->
     <br><br>
-      <button id='multplierBonus' class="round"  style="font-family:courier;">0-click harder: 15</button> 
+      <button id='multplierBonus' class="round"  style="font-family:courier;">click harder: 15</button> 
     <br><br>
-      <button id='autoClickBonus' class="round"  style="font-family:courier;">0-bonus click: 25 | +1/sec</button>
+      <button id='autoClickBonus' class="round"  style="font-family:courier;">auto click: 25 | +1/sec</button>
     <br><br>
-      <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
+      <button id='boostBonus' class="round"  style="font-family:courier;">frenzy: 30 | x200%/30sec</button><br><br>
      
     </div>
  <div class="timer" id="text-timer">
