--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
   
 <body>
+  
   <div class="banderole">
 
    <div class="loop-holder">
@@ -22,20 +23,29 @@
         <div class="loop-holder__text">Welcome to SmileyVille</div>
         <div class="loop-holder__text">Welcome to SmileyVille</div>
     </div>
-    </div>
+  </div>
   <div class="bodypart-container">
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
         <h3 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h3>
     </div>
-        <img class="round "src="https://images.unsplash.com/photo-1561361398-b2bc9f049851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="" id="clicker" style="width: 65%" onclick=""> <!-- smiley Tim -->
+  </div>
+    <div class="IMG-SPACE">
+        <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 65%" onclick="">
+      </div> <!-- smiley Tim -->
     <br><br>
+  </div>
+    
+      <div class ="button1">
       <button id='multplierBonus' class="round"  style="font-family:courier;">0-click harder: 15</button> 
+      </div>
     <br><br>
+    <div class ="button2">
       <button id='autoClickBonus' class="round"  style="font-family:courier;">0-bonus click: 25 | +1/sec</button>
+      </div>
     <br><br>
+    <div class="button3">
       <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
-     
     </div>
  <div class="timer" id="text-timer">
       Frenzy timer: 30s
