--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
   <div class="banderole">
 
    <div class="loop-holder">
-        <div class="loop-holder__text">Welcome to SmileyVille</div>
-        <div class="loop-holder__text">Welcome to SmileyVille</div>
-        <div class="loop-holder__text">Welcome to SmileyVille</div>
-        <div class="loop-holder__text">Welcome to SmileyVille</div>
-        <div class="loop-holder__text">Welcome to SmileyVille</div>
+        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text">Welcome to smiley clicker</div>
     </div>
   </div>
   <div class="bodypart-container">
     <div class="gameInfo">
         <h1 id='totalText'>Puntos: 0</h1>
-        <h3 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h3>
     </div>
   </div>
     <div class="IMG-SPACE">
-        <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 65%" onclick="">
+        <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 75%" onclick="">
       </div> <!-- smiley Tim -->
     <br><br>
   </div>
-    
+    <div class="container-btn">
+      <h4 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h4>
       <div class ="button1">
-      <button id='multplierBonus' class="round"  style="font-family:courier;">0-click harder: 15</button> 
+      <button id='multplierBonus' class="round">click harder: 15</button> 
       </div>
-    <br><br>
+
     <div class ="button2">
-      <button id='autoClickBonus' class="round"  style="font-family:courier;">0-bonus click: 25 | +1/sec</button>
+      <button id='autoClickBonus' class="round">auto click: 25 | +1/sec</button>
       </div>
-    <br><br>
     <div class="button3">
-      <button id='boostBonus' class="round"  style="font-family:courier;">0-points frenzy: 30 | +10/30sec</button><br><br>
+      <button id='boostBonus' class="round">frenzy: 30 | x200%/30sec</button><br><br>
+    </div>
     </div>
  <div class="timer" id="text-timer">
       Frenzy timer: 30s
