--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>SmileyClicker</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
      
 </head>
   
@@ -34,22 +34,61 @@
       </div> <!-- smiley Tim -->
     <br><br>
   </div>
-    <div class="container-btn">
-      <h4 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h4>
-      <div class ="button1">
-      <button id='multplierBonus' class="round">click harder: 15</button> 
-      </div>
+   <h4 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h4>
 
-    <div class ="button2">
-      <button id='autoClickBonus' class="round">auto click: 25 | +1/sec</button>
-      </div>
-    <div class="button3">
-      <button id='boostBonus' class="round">frenzy: 30 | x200%/30sec</button><br><br>
-    </div>
-    </div>
- <div class="timer" id="text-timer">
-      Frenzy timer: 30s
-    </div>
+
+<div class="container-btn-all">
+
+      <!-- bouton 1-->
+   <button id='multplierBonus' class="round01">
+        <div class="img-col">
+        <img src="./img/smiley_svg.svg" class="icon01">
+        </div>
+        <div class="container-btn">
+              <p>click harder: 15</p>
+        </div>
+        <div class="empty">
+          <span></span>
+        </div>
+    </button>
+      <!-- bouton 1-->
+
+
+    <!-- bouton 2-->
+  <button id='autoClickBonus' class="round01">
+    <div class="img-col">
+        <img src="./img/smiley_svg.svg" class="icon01">
+        </div>
+        <div class="container-btn">
+              <p>auto click: 25 | +1/sec</p>
+        </div>
+         <div class="empty">
+          <span></span>
+        </div>
+    </button>
+     <!-- bouton 2-->
+
+
+
+    <!-- bouton 3-->
+    <button id='boostBonus' class="round01">
+    <div class="img-col">
+        <img src="./img/smiley_svg.svg" class="icon01">
+        </div>
+        <div class="container-btn">
+              <p>frenzy: 30 | x200%/30sec</p>
+        </div>
+         <div class="empty">
+          <span></span>
+        </div>
+    </button>
+    <!-- bouton 3-->
+
+
+</div>
+  <div class="banderolle-bottom">
+        <div class="timer" id="text-timer">Frenzy timer: 30s</div>
+  </div>
     <script src="script.js"></script>
 </body>
 
