--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
   
 <body>
-  
+<div clas="double">
   <div class="banderole">
 
    <div class="loop-holder">
@@ -24,10 +24,11 @@
         <div class="loop-holder__text">Welcome to smiley clicker</div>
     </div>
   </div>
-  <div class="bodypart-container">
-    <div class="gameInfo">
-        <h1 id='totalText'>Puntos: 0</h1>
+  <div class="gameInfo">
+        <h1 id='totalText'>+2345</h1>
     </div>
+  <div class="bodypart-container">
+  </div>
   </div>
     <div class="IMG-SPACE">
         <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 75%" onclick="">
@@ -42,7 +43,7 @@
       <!-- bouton 1-->
    <button id='multplierBonus' class="round01">
         <div class="img-col">
-        <img src="./img/smiley_svg.svg" class="icon01">
+        <img src="./img/smiley_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
               <p>click harder: 15</p>
@@ -57,7 +58,7 @@
     <!-- bouton 2-->
   <button id='autoClickBonus' class="round01">
     <div class="img-col">
-        <img src="./img/smiley_svg.svg" class="icon01">
+        <img src="./img/hand_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
               <p>auto click: 25 | +1/sec</p>
@@ -73,7 +74,7 @@
     <!-- bouton 3-->
     <button id='boostBonus' class="round01">
     <div class="img-col">
-        <img src="./img/smiley_svg.svg" class="icon01">
+        <img src="./img/flame_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
               <p>frenzy: 30 | x200%/30sec</p>
