--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <br><br>
   </div>
 
-   <h4 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h4>
+   <h4 id="clickText">Smiley per click: 1 | Auto click: 0/sec </h4>
 
 
 <div class="container-btn-all">
@@ -49,7 +49,7 @@
         <img src="./img/smiley_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
-              <p id='multplierBonus'>click harder: 15</p>
+              <p id='multplierBonus'>Multiplicator: 15</p>
         </div>
         <div class="empty">
           <span></span>
@@ -64,7 +64,7 @@
         <img src="./img/hand_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
-              <p id='autoClickBonus'>auto click: 25 | +1/sec</p>
+              <p id='autoClickBonus'>Auto click: 25 | +1/sec</p>
         </div>
          <div class="empty">
           <span></span>
@@ -80,7 +80,7 @@
         <img src="./img/flame_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
-              <p id='boostBonus'>frenzy: 30 | x200%/30sec</p>
+              <p id='boostBonus'>Frenzy: 30 | x200%/30sec</p>
         </div>
          <div class="empty">
           <span></span>
