--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <div class="IMG-SPACE">
         <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 75%" onclick="">
       </div> <!-- smiley Tim -->
-    <br><br>
   </div>
 
    <h4 id="clickText">Puntos per click: 1 | AutoPuntos: 0/sec </h4>
@@ -49,7 +48,7 @@
         <img src="./img/smiley_svg_icon.svg" class="icon01">
         </div>
         <div class="container-btn">
-              <p id='multplierBonus'>click harder: 15</p>
+              <p id='multplierBonus'>CLICK HARDER</p>
         </div>
         <div class="empty">
           <span></span>
