--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="banderole">
 
    <div class="loop-holder">
-        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text">WELCOME to smiley clicker</div>
         <div class="loop-holder__text">Welcome to smiley clicker</div>
         <div class="loop-holder__text">Welcome to smiley clicker</div>
         <div class="loop-holder__text">Welcome to smiley clicker</div>
@@ -43,7 +43,7 @@
 <div class="container-btn-all">
 
       <!-- bouton 1-->
-   <button class="round01">
+   <button class="round01" id="bouton1">
         <div class="img-col">
         <img src="./img/smiley_svg_icon.svg" class="icon01">
         </div>
@@ -59,7 +59,7 @@
 
 
     <!-- bouton 2-->
-  <button class="round01">
+  <button class="round01" id="bouton2">
     <div class="img-col">
         <img src="./img/hand_svg_icon.svg" class="icon01">
         </div>
@@ -75,7 +75,7 @@
 
 
     <!-- bouton 3-->
-    <button class="round01">
+    <button class="round01" id="bouton3">
     <div class="img-col">
         <img src="./img/flame_svg_icon.svg" class="icon01">
         </div>
@@ -90,11 +90,17 @@
 
 
 </div>
-  <div class="banderolle-bottom">
-        <div class="timer" id="text-timer">Frenzy timer: 30s</div>
-  </div>
+<div class="banderolle-bottom">
+       <div class="loop-holder_base">
+        <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
+        <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
+        <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
+        <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
+        <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
+    </div>
+    </div>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
