--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </div>
     <div class="IMG-SPACE">
         <img src="./img/smiley_svg.svg" class="img-click"  alt="" id="clicker" style="width: 75%" onclick="">
+        <span id="actionClicker"><img id="img-action" src="./img/star.svg"> </span>
       </div> <!-- smiley Tim -->
   </div>
 
