review js color  + css + index

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <div class="banderole">
 
    <div class="loop-holder">
-        <div class="loop-holder__text">WELCOME to smiley clicker</div>
-        <div class="loop-holder__text">Welcome to smiley clicker</div>
-        <div class="loop-holder__text">Welcome to smiley clicker</div>
-        <div class="loop-holder__text">Welcome to smiley clicker</div>
-        <div class="loop-holder__text">Welcome to smiley clicker</div>
+        <div class="loop-holder__text" id="band01">WELCOME to smiley clicker</div>
+        <div class="loop-holder__text" id="band01">Welcome to smiley clicker</div>
+        <div class="loop-holder__text" id="band01">Welcome to smiley clicker</div>
+        <div class="loop-holder__text" id="band01">Welcome to smiley clicker</div>
+        <div class="loop-holder__text" id="band01">Welcome to smiley clicker</div>
     </div>
   </div>
 
-  <div class="gameInfo">
+  <div class="gameInfo" id="gameInfo">
         <h1 id='totalText'>+0</h1>
   </div>
 
@@ -95,7 +95,7 @@
 </div>
 
 <div class="banderolle-bottom">
-       <div class="loop-holder_base">
+       <div class="loop-holder_base" id="colorBandBottom">
         <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
         <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
         <div class="loop-holder__text_fenzy" id="base">WELCOME to smiley clicker</div>
